swimlane-devops-delivery/k8s-extras/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-app-to-mongo
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: mongo
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/component: app
      ports:
        - protocol: TCP
          port: 27017
